--- a/spigot/src/main/resources/lang/en_US.yml
+++ b/spigot/src/main/resources/lang/en_US.yml
@@ -2,8 +2,18 @@ internal:
   locale: "en_US"
   version: 1
 COMMAND:
+  API:
+    BADUSAGE: "&cInvalid command usage!"
+    USAGE: "USAGE: %s"
+    REQUIREMENTS:
+      INVALIDPLAYER: "&cThis command cannot be used by players."
+      INVALIDCONSOLE: "&cThis command cannot be used by the console."
+      INVALIDREMOTE: "&cThis command cannot be used remotely."
+      INVALIDBLOCK: "&cThis command cannot be used by command blocks."
+      NOPERMISSION: "&cYou do not have the permission required for this command: &6%s"
   ROOT:
     DESCRIPTION: "Show information about the plugin and authors."
+    DETAILS: "&7Running &6%s&7.<br>&7Use &6%s &7to view available commands."
   BALANCE:
     DESCRIPTION: "Show wallet address, eth, enj, and token balances."
     WALLETADDRESS: "&6Wallet Address: &d%s"
@@ -17,8 +27,28 @@ COMMAND:
     DESCRIPTION: "Show list of commands with their usage."
   LINK:
     DESCRIPTION: "Show linking code or linked address."
+    NULLWALLET: "&cUnable to show your wallet address."
+    SHOWWALLET: "&aYour account is linked to the wallet address: &6%s"
+    NULLCODE: "&cUnable to show your identity linking code."
+    INSTRUCTIONS:
+      1: "&6To link your account follow the steps below:"
+      2: "&7Download the Enjin Wallet app for Android or iOS"
+      3: "&7Browse to the Linked Apps section"
+      4: "&7Click the 'LINK APP' button"
+      5: "&7Select the wallet you wish to link"
+      6: "&7Enter the identity linking code shown below"
+      7: "&aIdentity Code: &6%s"
   SEND:
     DESCRIPTION: "Send the held token to another player."
+    SUBMITTED: "&aSend request submitted successfully. Please confirm the request in your wallet app."
+    MUSTHOLDITEM: "&cYou must hold the tokenized item you wish to send."
+    ITEMNOTTOKEN: "&cThe held item is not associated with a token."
+  CONF:
+    DESCRIPTION: "Perform operations on the plugin configuration."
+    SET:
+      DESCRIPTION: "Set new value for config option."
+      LANG:
+        DESCRIPTION: "Set the default language to use."
   TRADE:
     DESCRIPTION: "Show help for trade sub-commands."
     INVITE:
@@ -27,7 +57,33 @@ COMMAND:
       DESCRIPTION: "Accept another player's trade invite."
     DECLINE:
       DESCRIPTION: "Decline another player's trade invite."
+    NOOPENINVITE: "&cNo open trade invite from &6%s"
+    DECLINED:
+      SENDER: "&aYou have declined &6%s's &atrade invite."
+      TARGET: "&6%s &chas declined your trade invite."
+    ALREADYINVITED: "&cYou have already invited &6%s &cto trade."
+    WANTSTOTRADE: "&6%s &awants to trade with you."
+    INVITESENT: "&aTrade invite sent to &6%s!"
+    INVITEDTOTRADE: "&6%s &7has invited you to trade."
+    CONFIRM:
+      ACTION: "&6Please confirm the trade in your wallet app."
+      WAIT: "&6Please wait while the other player confirms the trade."
+    COMPLETE: "&6Your trade is complete!"
   UNLINK:
     DESCRIPTION: "Removes link between wallet and player account."
+    SUCCESS: "&aThe wallet has been unlinked from your account!"
   WALLET:
     DESCRIPTION: "Open your wallet inventory to view, check out, and return items."
+HINT:
+  LINK: "&cType &6'/enj link' &cfor instructions on how to link your Enjin Wallet."
+IDENTITY:
+  NOTLOADED: "&cYour player data is loading. Try again momentarily."
+ERRORS:
+  EXCEPTION: "&cERROR: &7%s"
+  CHOOSEOTHERPLAYER: "&cYou must specify a player other than yourself."
+  PLAYERNOTONLINE: "&6%s &cis not online."
+WALLET:
+  NOTLINKED:
+    SELF: "&cYou have not linked a wallet to your identity."
+    OTHER: "&6%s &chas not linked a wallet."
+  ALLOWANCENOTSET: "&cYou must approve the allowance request in your wallet before you can send or trade tokens."
